# remedi-ai-backend

./: .env.example  LICENSE  db.py  main.py  pyproject.toml  requirements.txt
app/: agent.py  db.py  lang.py  llm.py  stt.py  tools.py  translate.py  tts.py
scripts/: seed.sql
