[project]
name = "remedi-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "cryptography==48.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.45",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]
